<resources>
    <string name="app_name">Kanji Flash Card</string>
    <string name="sign_up"><u>Sign Up</u>.</string>
    <string name="sign_in"><u>Sign in</u>.</string>

    <string name="nav_home">Home</string>
    <string name="nav_quiz">Quiz</string>
    <string name="nav_about">About</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_change_pwd">Change Password</string>
    <string name="nav_sign_out">Sign out</string>

    <string name="nav_drawer_open">Open navigation drawer</string>
    <string name="nav_drawer_close">Close navigation drawer</string>

    <string name="popup_edit">Edit</string>
    <string name="popup_delete">Delete</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_quiz">QuizActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>